Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86336

tst_QNetworkReply tests are failing with CentOS 8.1 and system OpenSSL

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.2
    • 6.0
    • Network: SSL
    • None
    • Linux/Wayland
    • 5
    • 605d2163f1dcd7e1ad701ade913cb476b91865b1 (qt/qtbase/dev) 9bd8b6974dc4d41b205de2ed7e424624d91c569a (qt/qtbase/5.15)
    • Qt6_Foundation_Sprint 17

    Description

      tst_QNetworkReply tests are failing with CentOS 8.1 and system openssl.

       

      http://10.212.0.61:8083/coin/integration/qt/qt5/tasks/web_rescheduled_qt_qt5_1598257084828

      http://10.212.0.61:8083/coin/api/results/qt/qtbase/6e99d9d7789391e7593ca0e72b0804c6c3e5501b/LinuxCentOS_8_1x86_64LinuxCentOS_8_1x86_64GCCqtci-linux-CentOS-8.1-x86_64-01-4caf23UseLegacyInstructions/4937d4dc47ec81df5bdf671375656574b0b08973/test_1598257091/log.txt.gz

      /home/qt/work/qt/qtbase/tests/auto/network/access/qnetworkreply/test/target_wrapper.sh

      FAIL! : tst_QNetworkReply::putToHttps(empty) Request failed: SSL handshake failed
      agent:2020/08/24 08:37:39 build.go:264: Loc: [../tst_qnetworkreply.cpp(2792)]
      agent:2020/08/24 08:37:39 build.go:264: FAIL! : tst_QNetworkReply::putToHttps(generic) Request failed: SSL handshake failed
      agent:2020/08/24 08:37:39 build.go:264: Loc: [../tst_qnetworkreply.cpp(2792)]
      agent:2020/08/24 08:37:39 build.go:264: FAIL! : tst_QNetworkReply::putToHttps(small) Request failed: SSL handshake failed
      agent:2020/08/24 08:37:39 build.go:264: Loc: [../tst_qnetworkreply.cpp(2792)]
      agent:2020/08/24 08:37:39 build.go:264: FAIL! : tst_QNetworkReply::putToHttps(with-nul) Request failed: SSL handshake failed
      agent:2020/08/24 08:37:39 build.go:264: Loc: [../tst_qnetworkreply.cpp(2792)]
      agent:2020/08/24 08:37:39 build.go:264: FAIL! : tst_QNetworkReply::putToHttps(4k+1) Request failed: SSL handshake failed
      agent:2020/08/24 08:37:39 build.go:264: Loc: [../tst_qnetworkreply.cpp(2792)]
      agent:2020/08/24 08:37:39 build.go:264: FAIL! : tst_QNetworkReply::putToHttps(128k+1) Request failed: SSL handshake failed
      agent:2020/08/24 08:37:39 build.go:264: Loc: [../tst_qnetworkreply.cpp(2792)]
      agent:2020/08/24 08:37:39 build.go:264: FAIL! : tst_QNetworkReply::putToHttps(2MB+1) Request failed: SSL handshake failed
      agent:2020/08/24 08:37:39 build.go:264: Loc: [../tst_qnetworkreply.cpp(2792)]
      agent:2020/08/24 08:37:39 build.go:264: FAIL! : tst_QNetworkReply::putToHttpsSynchronous(empty) Request failed: SSL handshake failed
      agent:2020/08/24 08:37:39 build.go:264: Loc: [../tst_qnetworkreply.cpp(2837)]
      agent:2020/08/24 08:37:39 build.go:264: FAIL! : tst_QNetworkReply::putToHttpsSynchronous(generic) Request failed: SSL handshake failed
      agent:2020/08/24 08:37:39 build.go:264: Loc: [../tst_qnetworkreply.cpp(2837)]
      agent:2020/08/24 08:37:39 build.go:264: FAIL! : tst_QNetworkReply::putToHttpsSynchronous(small) Request failed: SSL handshake failed

      Attachments

        For Gerrit Dashboard: QTBUG-86336
        # Subject Branch Project Status CR V

        Activity

          People

            tpochep Timur Pocheptsov
            hehalmet Heikki Halmet
            Maurice Kalinowski Maurice Kalinowski
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes