tests/auto/network/ssl/qdtls/tst_qdtls.cpp
@@ -188,6 +188,9 @@ void tst_QDtls::initTestCase()
     defaultServerConfig.setDtlsCookieVerificationEnabled(false);
 
     hostName = QStringLiteral("bob.org");
+
+    void qt_ForceTlsSecurityLevel();
+    qt_ForceTlsSecurityLevel();
 }
 
 void tst_QDtls::init()
